--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ html {
   font-size: 2rem;
 }
 
-.uk-navbar-container {
+.uk-navbar-container, .uk-navbar-dropdown {
   background-color: #000!important;
 }
 
@@ -34,6 +34,23 @@ html {
 
 article.uk-article {
   padding: 6rem 0;
+}
+
+h1.uk-article-title {
+  border-bottom: 1px solid #000;
+  text-align: center;
+}
+
+.uk-divider-small::after, hr {
+  border-top-color: #000;
+}
+
+.uk-divider-icon {
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20viewBox%3D%220%200%2020%2020%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Ccircle%20fill%3D%22none%22%20stroke%3D%22%23000%22%20stroke-width%3D%222%22%20cx%3D%2210%22%20cy%3D%2210%22%20r%3D%227%22%20%2F%3E%0A%3C%2Fsvg%3E%0A");
+}
+
+.uk-divider-icon::before, .uk-divider-icon::after {
+  border-bottom-color: #000;
 }
 
 /* .uk-navbar-container {
